Replace auction system title and update styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>경매 시스템 Pro - 주사위 모드</title>
+    <title> 내전경매 </title>
     <style>
         :root { --p1: #00d2ff; --p2: #ff4757; --accent: #6c5ce7; --bg: #0f111a; --card: #1a1d2e; }
         body { font-family: 'Pretendard', sans-serif; background: var(--bg); color: white; display: flex; justify-content: center; margin: 0; padding: 20px; }
@@ -44,7 +44,7 @@
 
     <div class="container">
         <div id="start" class="page active">
-            <h1 style="text-align: center; font-size: 40px; margin-bottom: 40px;">🎲 AUCTION ROOM</h1>
+            <h1 style="text-align: center; font-size: 40px; margin-bottom: 40px;">🎲내전경매 </h1>
             <button onclick="showPage('create')">호스트: 방 만들기</button>
             <button onclick="showPage('join')" style="background:#444;">게스트: 입장하기</button>
         </div>
@@ -196,4 +196,5 @@
         }
     </script>
 </body>
+
 </html>
